welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:12: error: type mismatch;
 found   : Unit
 required: Boolean
  	if(!bSmile){
        ^